Renamed Context.details and associated methods in line with stash/fetch mechanism