@@ -15,7 +15,7 @@ public final class Context implements Iterable<Context> {
     final int depth;
     final Transformer<?, ?> transformer;
     final String description;
-    private final Map<String, Object> details;
+    private final Map<String, Object> stash;
     private final Function<Throwable, Boolean> exceptionListener;
     private final Function<Throwable, Boolean> syncedExceptionListener;
 
@@ -24,7 +24,7 @@ public final class Context implements Iterable<Context> {
         depth = 0;
         transformer = null;
         description = null;
-        details = Map.of();
+        stash = Collections.emptyMap();
         exceptionListener = null;
         syncedExceptionListener = null;
     }
@@ -34,7 +34,7 @@ public final class Context implements Iterable<Context> {
         depth = builder.parent != SEED ? builder.parent.depth + 1 : 0;
         transformer = builder.transformer;
         description = builder.description;
-        details = builder.details != null ? builder.details : Collections.emptyMap();
+        stash = builder.stash != null ? builder.stash : Collections.emptyMap();
         exceptionListener = builder.exceptionListener;
         syncedExceptionListener = builder.syncedExceptionListener;
     }
@@ -74,32 +74,31 @@ public final class Context implements Iterable<Context> {
         return Optional.empty();
     }
 
-    public Optional<Object> getDetail(String... name) {
+    public Optional<Object> fetch(String... name) {
         if (name.length == 0) {
-            return Optional.of(getDetails());
+            throw new IllegalArgumentException("Name must be at least 1 part long");
         } else if (name.length == 1 && name[0].equals("description")) {
             return Optional.of(getDescription());
         } else {
             for (Context context : this) {
-                Object detail = context.details.get(name[0]);
-                if (detail != null) {
-                    return resolveDetail(detail, name);
+                Object object = context.stash.get(name[0]);
+                if (object != null) {
+                    return resolveDetail(object, name);
                 }
             }
             return Optional.empty();
         }
     }
 
-    public Map<String, Object> getDetails() {
-        Map<String, Object> result = new HashMap<>();
+    Optional<Object> clear(String name) {
         for (Context context : this) {
-            context.details.forEach((key, value) -> {
-                if (!result.containsKey(key)) {
-                    result.put(key, value);
-                }
-            });
+            Object object = context.stash.get(name);
+            if (object != null) {
+                context.stash.clear();
+                return Optional.of(object);
+            }
         }
-        return result;
+        return Optional.empty();
     }
 
     @Override
@@ -122,10 +121,17 @@ public final class Context implements Iterable<Context> {
         };
     }
 
-    public String prettyDetails() {
-        Map<String, Object> details = getDetails();
-        if (details.isEmpty()) return "";
-        return prettyPrint(details, 0);
+    public String prettyStash() {
+        Map<String, Object> flatStash = new HashMap<>();
+        for (Context context : this) {
+            context.stash.forEach((key, value) -> {
+                if (!flatStash.containsKey(key)) {
+                    flatStash.put(key, value);
+                }
+            });
+        }
+        if (flatStash.isEmpty()) return "";
+        return prettyPrint(flatStash, 0);
     }
 
     private String prettyPrint(Object object, int indentation) {
@@ -159,7 +165,7 @@ public final class Context implements Iterable<Context> {
 
     @Override
     public String toString() {
-        return "Context { " + super.toString() + "," + getDescription() + "," + getDetails() + "}";
+        return "Context { " + getDescription() + "}";
     }
 
     void handleException(Throwable exception) {
@@ -178,12 +184,12 @@ public final class Context implements Iterable<Context> {
         exception.printStackTrace();  // TODO
     }
 
-    private static Optional<Object> resolveDetail(Object detail, String[] name) {
-        for (int i = 1; i < name.length; i++) {  // root detail has already been resolved, so start at 1
-            if (detail instanceof Map) detail = ((Map<?, ?>) detail).get(name[i]);
+    private static Optional<Object> resolveDetail(Object object, String[] name) {
+        for (int i = 1; i < name.length; i++) {  // root object has already been resolved, so start at 1
+            if (object instanceof Map) object = ((Map<?, ?>) object).get(name[i]);
             else return Optional.empty();
         }
-        return Optional.ofNullable(detail);
+        return Optional.ofNullable(object);
     }
 
     public static class Builder {
@@ -191,7 +197,7 @@ public final class Context implements Iterable<Context> {
         private final Context parent;
         private final Transformer<?, ?> transformer;
         private String description;
-        private Map<String, Object> details;
+        private Map<String, Object> stash;
         private Function<Throwable, Boolean> exceptionListener;
         private Function<Throwable, Boolean> syncedExceptionListener;
 
@@ -215,8 +221,8 @@ public final class Context implements Iterable<Context> {
             return this;
         }
 
-        public Builder details(Map<String, Object> details) {
-            this.details = details;
+        public Builder stash(Map<String, Object> stash) {
+            this.stash = stash;
             return this;
         }
 
@@ -248,9 +254,9 @@ public final class Context implements Iterable<Context> {
     public static class StringFormat {
 
         private final List<String> strings = new ArrayList<>();
-        private final List<String[]> detailNames = new ArrayList<>();
+        private final List<String[]> names = new ArrayList<>();
         private final Function<String, String> sanitizer;
-        private final boolean throwOnMissingDetail;  // TODO
+        private final boolean throwOnMissingItem;  // TODO
 
         public StringFormat(String format) {
             this(format, s -> s);
@@ -260,14 +266,14 @@ public final class Context implements Iterable<Context> {
             this(format, sanitizer, false);
         }
 
-        public StringFormat(String format, Function<String, String> sanitizer, boolean throwOnMissingDetail) {
+        public StringFormat(String format, Function<String, String> sanitizer, boolean throwOnMissingItem) {
             this.sanitizer = sanitizer;
-            this.throwOnMissingDetail = throwOnMissingDetail;
+            this.throwOnMissingItem = throwOnMissingItem;
             Matcher matcher = STRING_FORMAT_SPECIFIER.matcher(format);
             int pointer = 0;
             while (matcher.find()) {
                 strings.add(format.substring(pointer, matcher.start(0)));
-                detailNames.add(matcher.group(1).split("\\."));  // TODO use compiled pattern
+                names.add(matcher.group(1).split("\\."));  // TODO use compiled pattern
                 pointer = matcher.end(0);
             }
             strings.add(format.substring(pointer));
@@ -276,17 +282,17 @@ public final class Context implements Iterable<Context> {
         }
 
         public String format(Context context) {
-            if (detailNames.isEmpty()) return strings.get(0);
+            if (names.isEmpty()) return strings.get(0);
             StringBuilder stringBuilder = new StringBuilder();
             int i = 0;
-            for (; i < detailNames.size(); i++) {
-                String[] detailName = detailNames.get(i);
+            for (; i < names.size(); i++) {
+                String[] name = names.get(i);
                 stringBuilder
                         .append(strings.get(i))
-                        .append(context.getDetail(detailName)
+                        .append(context.fetch(name)
                                 .map(Object::toString)
                                 .map(sanitizer)
-                                .orElse(String.join(".", detailName)));  // TODO
+                                .orElse(String.join(".", name)));  // TODO
             }
             stringBuilder.append(strings.get(i));
             return stringBuilder.toString();
